syntax = "proto3";

import "google/protobuf/empty.proto";
import "rococo-common.proto";

package timofeyqa.grpc.rococo;

option java_multiple_files = true;
option java_package = "timofeyqa.grpc.rococo";
option java_outer_classname = "RococoMuseumProto";

service RococoMuseumService {
  rpc GetMuseum (Uuid) returns (Museum);
  rpc GetMuseumPage (Pageable) returns (PageMuseum);
  rpc GetMuseumsByUuids (UuidList) returns (MuseumList);
  rpc UpdateMuseum (Museum) returns (Museum);
}

message Museum {
  string id = 1;
  string title = 2;
  string description = 3;
  string city = 4;
  bytes photo = 5;
  string countryId = 6;
}

message PageMuseum {
  repeated Museum museums = 1;
  int64 total_elements = 2;
  int32 total_pages = 3;
}

message MuseumList {
  repeated Museum museums = 1;
}